inscription et connexion formulaire d'abord

--- a/HTML/connecter.html
+++ b/HTML/connecter.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TravelX</title>
+    <title>Document</title>
 </head>
 <body>
-    
-    <h1>👨‍💻chantier en cours de developement...<a href="./HTML/connexion.html">compte</a></h1>
+    <h1>bienvenu sur la page des connectez qui est en cours de developement...👽 <a href="" class="deconnexion">Deconnexion</a></h1>
 </body>
 </html>
