inscription connexion reussi

--- a/HTML/connexion.html
+++ b/HTML/connexion.html
@@ -12,20 +12,20 @@
     </nav>
     <div class="form-wrapper">
         <h2>Connectez-vous</h2>
-        <form action="" class="formulaire">
+        <form class="formulaire">
             <div class="form-control">
                 <input type="email" required name="email">
-                <label for="">Email</label>
+                <label>Email</label>
             </div>
             <div class="form-control">
                 <input type="password" required name="motDePasse" maxlength="8" minlength="4">
-                <label for="">Mot de passe</label>
+                <label>Mot de passe</label>
             </div>
             <button>Connexion</button>
             <div class="form-help">
                 <div class="remember-me">
                     <input type="checkbox" id="remember-me">Se vouvenie de moi
-                    <label for="remember-me"></label>
+                    <label></label>
                 </div>
                 <a href="#">Besoin d'aide?</a>
             </div>
@@ -37,5 +37,6 @@
             <a href="#">Lean more.</a>
         </small>
     </div>
+    <script src="./../JAVASCRIPTS/connexion.js"></script>
 </body>
 </html>
