--- a/HTML/inscription.html
+++ b/HTML/inscription.html
@@ -12,32 +12,32 @@
     </nav>
     <div class="form-wrapper">
         <h2>Inscrivez-vous</h2>
-        <form action="" class="formulaire">
+        <form class="formulaire">
             <div class="form-control">
-                <input type="text" required name="name" >
-                <label for="">Nom</label>
+                <input type="text" required name="name" id="name">
+                <label>Nom</label>
             </div>
             <div class="form-control">
-                <input type="text" required name="prenom">
-                <label for="">Prenom</label>
+                <input type="text" required name="prenom" id="prenom">
+                <label>Prenom</label>
             </div>
             <div class="form-control">
-                <input type="email" required name="email">
-                <label for="">Email</label>
+                <input type="email" required name="email" id="email">
+                <label>Email</label>
             </div>
             <div class="form-control">
-                <input type="password" required name="motDePasse" maxlength="8" minlength="4">
-                <label for="">Mot de passe</label>
+                <input type="password" required name="motDePasse" id="motDePasse" maxlength="8" minlength="4">
+                <label>Mot de passe</label>
             </div>
             <div class="form-control">
-                <input type="password" required name="confirmeMotDePasse" maxlength="8" minlength="4">
-                <label for="">confirmer Mot de passe</label>
+                <input type="password" required name="confirmeMotDePasse" id="confirmeMotDePasse" maxlength="8" minlength="4">
+                <label>confirmer Mot de passe</label>
             </div>
             <button>Valider</button>
             <div class="form-help">
                 <div class="remember-me">
                     <input type="checkbox" id="remember-me" required name="confirmerInfos">confirmer vos infos
-                    <label for="remember-me"></label>
+                    <label></label>
                 </div>
                 <a href="#">Besoin d'aide?</a>
             </div>
