--- a/HTML/connecter.html
+++ b/HTML/connecter.html
@@ -21,7 +21,8 @@
           <li><a>Products</a></li>
           <li><a>Contact us</a></li>
           <li><a>Account</a></li>
-          <li><button>Sign Out</button></li>
+          <span class="afficherNom"></span>
+          <li><button class="deconnexion">Sign Out</button></li>
         </ul>
       </nav>
     
@@ -86,5 +87,6 @@
    
            <p>Copyright © All Rights Reserved</p>
        </footer>
+       <script src="./../JAVASCRIPTS/connecter.js"></script>
 </body>
 </html>
