afficher email du user

--- a/HTML/connecter.html
+++ b/HTML/connecter.html
@@ -21,7 +21,7 @@
           <li><a>Products</a></li>
           <li><a>Contact us</a></li>
           <li><a>Account</a></li>
-          <span class="afficherNom"></span>
+          <p class="afficherNom"></p>
           <li><button class="deconnexion">Sign Out</button></li>
         </ul>
       </nav>
